# Mailroom

./: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  clippy.toml  justfile
.github/workflows/: ci.yml
config/: orchestrator.toml
docs/: ADOPTING.md  BOUNCE-PRETTY.md  THUNDERBIRD-CLIENT-CONFIG.md
mail-calendar/: Cargo.toml
mail-calendar/src/: ics.rs  item.rs  lib.rs  merge.rs
mail-cli/: Cargo.toml
mail-cli/src/: main.rs
mail-config/: Cargo.toml
mail-config/examples/: dump_categories_sieve.rs
mail-config/src/: categories.rs  dkim.rs  domain.rs  dovecot.rs  error.rs  lib.rs  mailbox_layout.rs  postfix.rs  sieve.rs
mail-config/tests/: categories_proptest.rs  thundercrab_wire_compat.rs
mail-orchestrator/: Cargo.toml
mail-orchestrator/src/: config.rs  db.rs  main.rs  notifier.rs  parser.rs  router.rs  scheduler.rs  sender.rs  templates.rs  watcher.rs
mail-orchestrator/tests/: config_tests.rs  db_tests.rs  router_tests.rs
mail-templates/: Cargo.toml  QUICKSTART.md
mail-templates/src/: escape.rs  lib.rs  prebuilt.rs  render_html.rs  render_plain.rs  tokens.rs
migrations/: 001_initial.sql
templates/default/: notification.txt.j2  router_ack.txt.j2
