[workspace]
resolver = "2"
members = [
    "mail-orchestrator",
    "mail-config",
    "mail-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/redcaptian1917/Secure-Email-Server-and-UI"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }
