[package]
name = "mail-cli"
description = "CLI tool for managing the secure email server — accounts, DKIM, health checks"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "mail-admin"
path = "src/main.rs"

[dependencies]
mail-config = { path = "../mail-config" }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
