[package]
name = "mail-config"
description = "Programmatic management of Postfix, Dovecot, OpenDKIM, and Sieve configurations"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
# Property-based tests against the rule evaluator. The fuzz surface
# is finite (rule shapes + header bags) so bounded inputs keep run
# time deterministic; we only need a few hundred iterations to cover
# the interesting state space.
proptest = "1"
