[package]
name = "mail-orchestrator"
description = "Standalone email orchestration daemon for multi-identity Postfix+Dovecot mail servers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "mail-orchestrator"
path = "src/main.rs"

[dependencies]
mail-config = { path = "../mail-config" }

# Async runtime
tokio = { workspace = true }

# Config
serde = { workspace = true }
toml = { workspace = true }

# Email parsing (RFC 5322)
mail-parser = "0.9"

# Email sending
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder", "hostname"] }

# Maildir watching (inotify on Linux).
# Pinned to v8: drops the unmaintained `instant` transitive via notify-types
# (RUSTSEC-2024-0384). notify 9 is still pre-release (9.0.0-rc.2 as of
# 2026-04-06) — hold until stable per AVP-2 "no pre-release deps" rule.
notify = "8"

# Database (audit log, delivery tracking)
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }

# Templates
minijinja = "2"

# Scheduling
cron = "0.13"
chrono = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# CLI
clap = { version = "4", features = ["derive"] }

# Message tracking
uuid = { version = "1", features = ["v4", "serde"] }

# Command parsing
regex = "1"

# Serialization
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
