[package]
name = "mail-templates"
description = "Branded HTML/plain transactional email rendering for the PlausiDen mail stack. Group cards + concise how-tos, table-based + inline-styled output."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "mail_templates"
path = "src/lib.rs"

# `mail-tpl` — CLI for rendering an EmailDocument JSON to HTML + plain
# Useful for operator scripts, cron jobs, ad-hoc one-shot polished mail.
[[bin]]
name = "mail-tpl"
path = "src/bin/mail-tpl.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
